--- a/www/index.html
+++ b/www/index.html
@@ -9,10 +9,10 @@
     </head>
     <body>
         <div>
-            <button id="interstitialad">Interstitial Ad</button>
+            <button id="interstitialad">Interstitial-Ad</button>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
-        <script>
+        <script type="text/javascript">
              document.addEventListener('deviceready', function(){
                  admob.banner.prepare();
                  admob.banner.show({
